# vtx-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  USAGE.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  publish.yml  release.yml
apps/vtx-demo/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
apps/vtx-demo/src/: main.ts  styles.css
apps/vtx-demo/src-tauri/: Cargo.toml  tauri.conf.json
apps/vtx-demo/src-tauri/capabilities/: default.json
apps/vtx-demo/src-tauri/src/: lib.rs  main.rs
crates/vtx-common/: Cargo.toml
crates/vtx-common/src/: lib.rs  types.rs
crates/vtx-engine/: Cargo.toml  build.rs
crates/vtx-engine/src/: audio.rs  builder.rs  common.rs  config_persistence.rs  history.rs  lib.rs  model_manager.rs  processor.rs  ptt.rs
crates/vtx-engine/src/platform/: backend.rs  mod.rs
crates/vtx-engine/src/platform/linux/: mod.rs  pipewire.rs
crates/vtx-engine/src/platform/macos/: coreaudio.rs  mod.rs  screencapturekit.rs
crates/vtx-engine/src/platform/windows/: mod.rs  wasapi.rs
crates/vtx-engine/src/transcription/: mod.rs  queue.rs  transcribe_state.rs  transcriber.rs  whisper_ffi.rs
docs/: flowstt-migration.md  omnirec-integration.md
openspec/changes/add-caching-ci-publish-workflows/: design.md  tasks.md
openspec/changes/add-caching-ci-publish-workflows/specs/workflow-caching/: spec.md
openspec/changes/agc/: proposal.md
openspec/changes/agc-noise-gate/specs/agc/: spec.md
openspec/changes/agc/specs/agc/: spec.md
openspec/changes/archive/2026-03-03-library-requirements-and-design/: design.md  tasks.md
openspec/changes/archive/2026-03-05-library-design-api-refactor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-06-production-publication/: proposal.md
openspec/changes/archive/2026-03-07-configuration/: design.md
openspec/changes/archive/2026-03-07-publish-workflow-github-release/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-07-wave-file-processing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-08-agc/: design.md  tasks.md
openspec/changes/archive/2026-03-08-speech-activity-history/: design.md  tasks.md
openspec/changes/archive/2026-03-11-add-caching-ci-publish-workflows/: proposal.md
openspec/changes/archive/2026-03-11-playback-reprocess-raw/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-add-whisper-model-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-agc-noise-gate/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-improved-release-process/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-stream-audio-data/: proposal.md
openspec/changes/archive/2026-03-22-demo-app-persistent-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-23-noise-reduction-agc/: design.md  tasks.md
openspec/changes/configuration/: proposal.md  tasks.md
openspec/changes/library-requirements-and-design/: proposal.md
openspec/changes/noise-reduction-agc/: proposal.md
openspec/changes/production-publication/: design.md  tasks.md
openspec/changes/speech-activity-history/: proposal.md
openspec/changes/stream-audio-data/: design.md  tasks.md
openspec/specs/agc/: spec.md
openspec/specs/agc-processor/: spec.md
openspec/specs/audio-data-streaming/: spec.md
openspec/specs/audio-output-playback/: spec.md
openspec/specs/audio-stream-transcription/: spec.md
openspec/specs/broadcast-events/: spec.md
openspec/specs/consumer-change-outlines/: spec.md
openspec/specs/crate-publication/: spec.md
openspec/specs/demo-configuration-ui/: spec.md
openspec/specs/demo-document-model/: spec.md
openspec/specs/demo-reprocess/: spec.md
openspec/specs/engine-builder/: spec.md
openspec/specs/engine-config-persistence/: spec.md
openspec/specs/github-release/: spec.md
openspec/specs/model-manager/: spec.md
openspec/specs/noise-gate-enhancement/: spec.md
openspec/specs/ptt-control/: spec.md
openspec/specs/recording-mode/: spec.md
openspec/specs/release-workflow/: spec.md
openspec/specs/speech-activity-history/: spec.md
openspec/specs/speech-activity-visualization/: spec.md
openspec/specs/timestamped-segments/: spec.md
openspec/specs/transcription-history/: spec.md
openspec/specs/transcription-profiles/: spec.md
openspec/specs/usage-documentation/: spec.md
openspec/specs/whisper-model-ui/: spec.md
scripts/: release.sh
(+41 files in other folders)
