[package]
name = "vtx-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Demo application for vtx-engine voice processing library"

[lib]
name = "vtx_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
vtx-common = { workspace = true }
vtx-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
